Agregar validacion de token a los test y al swagger
