# src/models/user.js
@@ -17,9 +17,9 @@ const userSchema = new mongoose.Schema({
         type: String,
         required: true
     },
-    isAdmin: {
-        type: Boolean,
-        default: false
+    role: {
+        type: String,
+        default: 'User'
     },
     street: {
         type: String,
