# src/routes/userRoutes.js
@@ -8,18 +8,22 @@ const { createUser,
     updateUser,
     deleteUser,
     login,
+    register,
     forgotPassword,
     resetPassword} = require('../controllers/usuarioController');
+const LogUser = require('../middlewares/auth-require');
+const isAdmin = require('../middlewares/isAdmin');
 
-router.post('/', createUser);
-router.get('/', getUsers);
-router.get('/:id', getUser);
-router.get('/get/count', getUserCount);
-router.get('/get/email', getEmail);
+router.post('/', LogUser, isAdmin, createUser);
+router.get('/', LogUser, isAdmin, getUsers);
+router.get('/:id', LogUser, getUser);
+router.get('/get/count', LogUser, isAdmin, getUserCount);
+router.get('/get/email', LogUser, getEmail);
 router.post('/login', login);
+router.post('/register', register);
 router.post('/forgot', forgotPassword);
 router.put('/reset', resetPassword);
-router.put('/:id', updateUser);
-router.delete('/:id', deleteUser);
+router.put('/:id', LogUser, updateUser);
+router.delete('/:id', LogUser, deleteUser);
 
 module.exports = router;
